# link3

./: .gitignore  Cargo.toml  README.MD  notes.md
client-next/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client-next/api/: file.ts  getHub.tsx  upload.ts
client-next/components/: auth.tsx  buttons.tsx  layout.tsx  layout_dashboard.tsx  nav_bar.tsx  near.tsx  top_bar.tsx
client-next/components/dashboard/: hub.tsx  hub_form.tsx  link_form.tsx  link_form.tsx.bk  link_tree.tsx  link_tree_item.tsx
client-next/components/icons/: logo.tsx  near.tsx
client-next/components/utils/: label_error.tsx  upload_image.tsx
client-next/context/: auth.tsx  near.tsx
client-next/middleware/: multipart-form-parser.ts
client-next/near/: config.ts  types.ts
client-next/pages/: [account_id].tsx  _app.tsx  dashboard.tsx  index.tsx
client-next/pages/api/: file.ts  file.ts.2.bk  file.ts.formidable.bk  hub.ts
client-next/pages/dashboard/: create.tsx  index.tsx
client-next/styles/: globals.css
client-web/: .env  package-lock.json  package.json  tailwind.config.js
client-web/near/: main.js
client-web/src/: App.js  index.js
client-web/src/near/: config.js
contracts/: Cargo.toml  build.sh  package.json
contracts/src/: item.rs  lib.rs  link3.rs
contracts/src/utils/: counter.rs  keyvalue.rs  simple_default.rs
src/: counter.rs  item.rs  lib.rs
